# mlops-mentorship-project

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  SECURITY.md  SETUP_GUIDE.md  TEARDOWN.md
contracts/: README.md  pyproject.toml
contracts/contracts/: __init__.py
contracts/contracts/schemas/: __init__.py  dlq.py  iceberg.py  inference.py  payment_event.py
contracts/contracts/sql/: payment_events.sql
orchestration-dagster/: .gitignore  .pyiceberg.yaml  Dockerfile  ICEBERG_SETUP.md  README.md  dagster.yaml  pyproject.toml  set_pyiceberg_env.sh  test_direct_s3fs.py  test_iceberg_merge.py  test_s3_connection.py
orchestration-dagster/.dlt/: config.toml  secrets.toml.example
orchestration-dagster/src/dlt_sources/reddit/: source.py
orchestration-dagster/src/orchestration_dagster/: definitions.py  partitions.py
orchestration-dagster/src/orchestration_dagster/defs/: defs.yaml
orchestration-dagster/src/orchestration_dagster/defs/loads/: reddit.py
orchestration-dagster/src/orchestration_dagster/ml/: __init__.py  data_quality.py  training.py
orchestration-dagster/src/orchestration_dagster/resources/: custom_fileio.py  dbt.py  iceberg.py  postgres.py  trino.py
orchestration-dagster/src/orchestration_dagster/sources/: feature_export.py  payment_ingestion.py  payments.py  reddit.py  reddit_pyarrow.py
orchestration-dagster/tests/: test_assets.py
payment-pipeline/: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.inference  Dockerfile.normalizer  Dockerfile.orchestrator  README.md  pyproject.toml
payment-pipeline/docker/gateway/: Dockerfile.adyen  Dockerfile.braintree  Dockerfile.square  Dockerfile.stripe
payment-pipeline/docker/normalizer/: Dockerfile.adyen  Dockerfile.braintree  Dockerfile.square  Dockerfile.stripe
payment-pipeline/docker/traefik/: traefik.yml
payment-pipeline/inference_service/: config.py  main.py
payment-pipeline/inference_service/routes/: churn.py  fraud.py  recovery.py  retry.py
payment-pipeline/simulator/: __init__.py  adyen_generator.py  braintree_generator.py  main.py  stripe_generator.py
payment-pipeline/src/normalizer/: config.py  main.py
payment-pipeline/src/normalizer/entrypoints/: base.py  square_main.py
payment-pipeline/src/normalizer/handlers/: adyen.py  braintree.py  stripe.py
payment-pipeline/src/normalizer/transformers/: __init__.py  base.py  stripe.py
payment-pipeline/src/normalizer/validators/: amount.py  currency.py  nulls.py
payment-pipeline/src/orchestrator/: __init__.py  config.py  consumer.py  main.py
payment-pipeline/src/orchestrator/activities/: __init__.py  churn.py  fraud.py  iceberg.py  postgres.py  validation.py
payment-pipeline/src/orchestrator/models/: inference.py
payment-pipeline/src/orchestrator/workflows/: payment_event.py
payment-pipeline/src/payment_gateway/: __init__.py  config.py  main.py
payment-pipeline/src/payment_gateway/core/: __init__.py  base_models.py  exceptions.py
payment-pipeline/src/payment_gateway/entrypoints/: base.py  braintree_main.py  stripe_main.py
payment-pipeline/src/payment_gateway/providers/adyen/: __init__.py  router.py  validator.py
payment-pipeline/src/payment_gateway/providers/braintree/: validator.py
payment-pipeline/src/payment_gateway/providers/square/: __init__.py  router.py  validator.py
payment-pipeline/src/payment_gateway/providers/stripe/: __init__.py  validator.py
payment-pipeline/tests/: conftest.py
payment-pipeline/tests/integration/: __init__.py
payment-pipeline/tests/unit/: test_normalizer_handlers.py  test_normalizer_transformers.py  test_normalizer_validators.py  test_orchestrator_activities.py  test_orchestrator_workflows.py  test_square_handlers.py  test_square_transformers.py  test_stripe_models.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/docker/: Dockerfile.adyen  Dockerfile.braintree  Dockerfile.square  Dockerfile.stripe
services/gateway/src/payment_gateway/: config.py
services/gateway/src/payment_gateway/core/: base_models.py  kafka_producer.py
services/gateway/src/payment_gateway/entrypoints/: __init__.py  adyen_main.py  braintree_main.py  square_main.py
services/gateway/tests/unit/: test_adyen_validator.py  test_square_validator.py  test_stripe_validator.py
services/inference/: Dockerfile  README.md  pyproject.toml
services/inference/docker/: Dockerfile
services/inference/src/inference_service/: __init__.py  config.py  main.py
services/inference/src/inference_service/routes/: __init__.py  churn.py  fraud.py
services/inference/tests/unit/: test_inference_service.py
services/normalizer/: Dockerfile  pyproject.toml
services/normalizer/src/normalizer/: __init__.py  main.py
services/normalizer/src/normalizer/entrypoints/: adyen_main.py  braintree_main.py  stripe_main.py
services/normalizer/src/normalizer/handlers/: square.py
services/normalizer/tests/unit/: __init__.py  test_adyen_handlers.py  test_adyen_transformers.py  test_braintree_handlers.py  test_braintree_transformers.py
services/temporal/: README.md  pyproject.toml
services/temporal/docker/: Dockerfile
services/temporal/src/temporal_worker/: config.py  main.py
services/temporal/tests/: __init__.py
services/temporal/tests/unit/: test_temporal_worker_activities.py  test_temporal_worker_workflows.py
temporal/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
temporal/temporal/: config.py  payment_generator.py  worker.py
temporal/temporal/activities/: __init__.py  charge_payments.py  enrich_context.py  fraud_check.py  kafka_emitter.py  normalize_event.py  predict_retry_strategy.py  provider_retry.py  retry_strategy.py  validate_event.py
temporal/temporal/providers/: __init__.py  base.py  braintree.py  square.py  stripe.py
temporal/temporal/workflows/: __init__.py  payment_processing.py  payment_recovery.py
temporal/tests/: __init__.py  conftest.py  test_activities.py  test_kafka_emitter.py  test_providers.py  test_validate_event.py  test_workflow.py
tools/simulator/: pyproject.toml  square_generator.py
(+300 files in other folders)
