[project]
name = "orchestration_dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.11.16",
    "dagster-iceberg>=0.1.0",  # Iceberg IO manager
    "pyiceberg>=0.7.0",  # Core PyIceberg library (required by dagster-iceberg)
    "praw>=7.7.1",  # Reddit API client
    "pandas>=2.0.0",  # DataFrame library
    "pyarrow>=14.0.0",  # Arrow data format (required for dagster-iceberg)
    "sqlalchemy>=2.0.18",  # Required by PyIceberg (2.0.18+)
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration_dagster"
registry_modules = [
    "orchestration_dagster.components.*",
]


