[project]
name = "orchestration_dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.11.16",
    "dagster-postgres",  # PostgreSQL storage for K8s run pods
    "dagster-iceberg>=0.1.0",  # Iceberg IO manager
    "dagster-dbt>=0.24.0",  # DBT integration for asset orchestration
    "pyiceberg>=0.7.0",  # Core PyIceberg library (required by dagster-iceberg)
    "psycopg[binary]>=3.1.0",  # PostgreSQL client for payment event ingestion
    "pandas>=2.0.0",  # DataFrame library
    "pyarrow>=14.0.0",  # Arrow data format (required for dagster-iceberg)
    "sqlalchemy>=2.0.18",  # Required by PyIceberg (2.0.18+)
    "trino>=0.330.0",  # Trino Python client for querying Trino
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration_dagster"
registry_modules = [
    "orchestration_dagster.components.*",
]
