[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payment-gateway"
version = "0.1.0"
description = "Payment webhook gateway with signature verification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiokafka>=0.10.0",
    "braintree>=4.40.0",
    "python-multipart>=0.0.19",
    "mlops-contracts",
]

[tool.uv.sources]
mlops-contracts = { path = "../../contracts" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/payment_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
