[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payment-normalizer"
version = "0.1.0"
description = "Kafka consumer for payment event validation and normalization"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiokafka>=0.10.0",
    "mlops-contracts",
]

[tool.uv.sources]
mlops-contracts = { path = "../../contracts" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/normalizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
