[project]
name = "webhook-simulator"
version = "0.1.0"
description = "Webhook traffic generator for payment gateway testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
]

[project.scripts]
simulator = "simulator.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulator"]
